# crubit

./: BUILD.gn  CMakeLists.txt  crubit.gni  rust-toolchain.toml
.github/workflows/: mdbook.yaml  trigger_nightly_matrix.yaml
bazel/: llvm.bzl
cc_bindings_from_rs/: BUILD  cargo-cpp_api_from_rust.rs  cmdline.rs  lib.rs  run_compiler_test_support.rs
cc_bindings_from_rs/bazel_support/: cc_bindings_from_rust_rule.bzl
cc_bindings_from_rs/generate_bindings/: BUILD  format_type.rs  format_type_test.rs  generate_bindings_test.rs  generate_function.rs  generate_function_test.rs  generate_function_thunk.rs  generate_struct_and_union.rs  generate_struct_and_union_test.rs  generate_template_specialization.rs  get_generic_args.rs  lib.rs  query_compiler.rs  test_helpers.rs
common/: code_gen_utils.rs  crubit_feature.rs  token_stream_matchers.rs
docs/rust/: enums.md  functions.md  structs.md
nullability/inference/: collect_evidence.cc
nullability/test/: check_macros.cc
rs_bindings_from_cc/: BUILD  decl_importer.h  importer.cc  ir.cc  ir.h  ir.rs  ir_from_cc_test.rs  ir_testing.rs
rs_bindings_from_cc/bazel_support/: compile_cc.bzl  generate_bindings.bzl  rust_bindings_from_cc_utils.bzl
rs_bindings_from_cc/generate_bindings/: BUILD  cpp_type_name.rs  generate_bindings_test.rs  generate_comment_test.rs  generate_dyn_callable.rs  generate_enum.rs  generate_enum_test.rs  generate_function.rs  generate_function_test.rs  generate_function_thunk.rs  generate_struct_and_union.rs  has_bindings.rs  (+5 more)
support/: BUILD  BUILD.gn  annotations.swig  annotations_internal.h  oops.rs
(+176 files in other folders)
