# Part of the Crubit project, under the Apache License v2.0 with LLVM
# Exceptions. See /LICENSE for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

import("crubit.gni")

group("cpp_api_from_rust_bindings_rs_deps") {
  # These are the dependencies required by Rust implementations of bindings.
  public_deps = [
  ]
}

group("cpp_api_from_rust_bindings_cpp_deps") {
  # These are the dependencies required by C++ implementations of bindings.
  public_deps = [
    "$crubit_src_dir/support",
    "$crubit_src_dir/support/rs_std",
    "$crubit_src_dir/support/internal",
  ]
}
