# Part of the Crubit project, under the Apache License v2.0 with LLVM
# Exceptions. See /LICENSE for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

import("//build_overrides/crubit.gni")

if (!defined(crubit_src_dir)) {
  crubit_src_dir = "//third_party/crubit"
}

if (!defined(crubit_absl_dep_target)) {
  crubit_absl_dep_target = "//third_party/abseil-cpp:absl"
}
